# instant-convert

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
src/: App.css  App.jsx  aboutConfig.js  i18n.js  settings.js  supportedFormats.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: compression.rs  conversion.rs  converters.rs  lib.rs  main.rs  merge.rs  ocr.rs  reduction.rs  shared.rs
src/components/: BatchFileList.jsx  FileUpload.jsx  OutputDirectoryCard.jsx  Sidebar.jsx
src/config/: i18n.js
src/shared/components/: Sidebar.jsx
src/shared/hooks/: usePathDropzone.js
src/shared/utils/: filePaths.js  nameTemplate.js  tauri.js
src/utils/: dropzone.js  filePaths.js  nameTemplate.js  tauri.js
src/views/: About.jsx  Compresser.jsx  Convertir.jsx  FusionPDF.jsx  Ocr.jsx  Reduction.jsx  Settings.jsx
