[package]
name = "instant-convert"
version = "0.1.0"
description = "Desktop toolbox for converting, compressing, reducing and OCR-processing files."
authors = ["Armand"]
edition = "2021"
license = "MIT"

[lib]
name = "instant_convert_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.6.0"

# Sérialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Traitement de fichiers
image = "0.25.9"
printpdf = { version = "0.9.0", features = ["png", "jpeg", "gif", "bmp", "tiff", "webp", "ico", "pnm", "tga"] }
lopdf = "0.39.0"
zip = "7.4.0"

# OCR (IA) - Garde-les si tu prévois l'onglet OCR
ocrs = "0.12.0"
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }
rten = { version = "0.24", features = ["onnx_format"] }
